src/main/java/com/example/project_telegram_bot/error/ParsingException.java
package com.example.project_telegram_bot.error;

public class ParsingException extends RuntimeException {
    public ParsingException(String message) {
        super(message);
    }

    public ParsingException(String message, Throwable cause) {
        super(message, cause);
    }
}
